--- a/heatwave/config/secrets.yml
+++ b/heatwave/config/secrets.yml
@@ -19,4 +19,6 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
+  admin_email: <%= ENV["ADMIN_EMAIL"] %>
+  admin_password: <%= ENV["ADMIN_PASSWORD"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
