--- a/messenger/Gemfile
+++ b/messenger/Gemfile
@@ -2,4 +2,5 @@ source 'https://rubygems.org'
 
 # Specify your gem's dependencies in messenger.gemspec
 gemspec
-gem 'sms_sender', path: ENV['SENDER_HOME']
+SENDER_HOME = ENV['SENDER_HOME'] || '../sms_sender'
+gem 'sms_sender', path: SENDER_HOME
