--- a/heatwave/Gemfile
+++ b/heatwave/Gemfile
@@ -46,6 +46,8 @@ gem 'sms_sender', '~> 1.0.0', path: SENDER_HOME
 # Use the Heatwave messenger
 gem 'messenger', '~> 1.0.1', path: MESSENGER_HOME
 
+# bootstrap
+gem 'bootstrap-sass', '~> 3.2.0'
 # Use Unicorn as the app server
 # gem 'unicorn'
 
